--- a/css/index.css
+++ b/css/index.css
@@ -1,22 +1,26 @@
 html {
-
+  /* background: #466368;
+  background: linear-gradient(#648880, #293f50);
+  border-radius: 6px;
+  height: 120px; */
 }
 header {
-  background-color: #5C21B8;
+  background-color: #463AFF;
   /* background-image:url(../img/Devasthana.jpg) ; */
   background-size: cover;
   padding: 1% 2%;
-  border-radius: 2%;
+  border-radius: 1% 2%;
   justify-content: center;
   align-content: center;
   display: block;
   position: sticky;
-  bottom: auto;
+  transition-property: all;
 }
 body{
   margin: 2%;
   padding: 1%;
-  background-color: #FFFfff;
+  background: #FFFfff;
+  background: linear-gradient(#F8F6C6 , #F5C6F8);
   font-family: "Noto Sans Kannada", "Noto Serif Kannada", "Baloo Tamma 2", sans-serif;
 }
 h1 {
@@ -77,7 +81,8 @@ main {
 }
 .left {
   background-color: #607327;
-  background-image: url(../img/teru.jpg);
+  /* background-image: url(../img/teru.jpg); */
+  background: linear-gradient(#FFB5B5 , #FEFFB5);
   background-size: cover;
   width: 20%;
   height:100vh;
@@ -116,8 +121,13 @@ footer > p > img {
 
 footer {
   width: 90%;
+  padding: 3%;
   display: block;
   clear: both;
+  /* background: #FFFfff; */
+  background-image: url("../img/KMH Logo.png");
+  background-repeat: no-repeat;
+  background: linear-gradient(90deg, #B9FF89, #89B6FF , #F889FF);
 }
 table{
   display: block;
@@ -186,7 +196,10 @@ td:hover {
 }
 
 #logo {
-  max-width: 5%;
+  max-width: 30%;
+  padding-right: 3%;
+  float: right;
+  border-width: 0px;
 }
 #name {
   font-weight: bold;
